<resources>
    <string name="loading">Loading</string>
    <string name="NightMode">Night Mode</string>
    <string name="yes">yes</string>
    <string name="ok">ok</string>
    <string name="cancel">cancle</string>
    <string name="savewallpaper">do you want to save wallpaper ?</string>
    <string name="leaveapp">Leave the application</string>
    <string name="leavetextmsg">Do you want to exit the application?</string>
    <string name="title">Name</string>
    <string name="message">Message</string>
    <string name="send">send</string>
    <string name="reportHint">Note: Please explain the problem well so that it can be solved as soon as possible</string>
    <string name="wallhint">Wallpapers are renewed every time you enter the application</string>
    <string name="ramadankareem">Ramadan Kareem 🌙</string>
    <string name="hello">Hello !</string>
    <string name="firstalertdialogmsg">We thank you for downloading this application, do not forget to share it with loved ones and take the initiative to recite, dhikr and good deeds</string>
    <string name="manualcorr">Manual Corrections:</string>
    <string name="minutes">Minutes</string>
    <string name="locationloading">Determining location</string>
    <string name="itsprayertime">Prayer</string>
    <string name="incity">CIty</string>
    <string name="app_name" translatable="false">Minaret</string>
    <string name="app_name_short" translatable="false">Minaret</string>
    <string name="app_desc" translatable="false">Daily Muslim Kit</string>
    <string name="city">City</string>
    <string name="location">Detect location</string>
    <string name="madina">Madina</string>
    <string name="fajr">Fajr</string>
    <string name="dohr">Dhor</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Magrib</string>
    <string name="isha">Isha</string>
    <string name="menu_prayertimes">Salah Times</string>
    <string name="menu_prayersettings">Prayer settings</string>
    <string name="menu_sunrise">Sunrise</string>
    <string name="menu_sunset">Sunset</string>
    <string name="menu_azkar">Preferred dhikr</string>
    <string name="menu_misbaha">Tasbi Counter</string>
    <string name="menu_qibla">Qiblah</string>
    <string name="menu_zakat">Zakat Calculator</string>
    <string name="menu_wallpaper">Wallpapers</string>
    <string name="menu_widget">Widget</string>
    <string name="menu_aboutus">About us</string>
    <string name="menu_share">Share</string>
    <string name="menu_set1">Applications</string>
    <string name="menu_set2">Accessories</string>
    <string name="menu_set3">Settings</string>
    <string name="adkar_sabah_massaa">Morning and Evening Prayers</string>
    <string name="hijri_date" translatable="false">Hijri Date</string>
    <string name="salatdikr">Prayer Dhikr</string>
    <string name="salatdikrsub">Dhikr after the peace of the obligatory prayer</string>
    <string name="salat1" translatable="false">أَسْـتَغْفِرُ الله،  أَسْـتَغْفِرُ الله،  أَسْـتَغْفِرُ الله.
اللّهُـمَّ أَنْـتَ السَّلامُ ، وَمِـنْكَ السَّلام ، تَبارَكْتَ يا ذا الجَـلالِ وَالإِكْـرام .</string>
    <string name="salat2" translatable="false">لا إلهَ إلاّ اللّهُ وحدَهُ لا شريكَ لهُ، لهُ المُـلْكُ ولهُ الحَمْد، وهوَ على كلّ شَيءٍ قَدير، اللّهُـمَّ لا مانِعَ لِما أَعْطَـيْت، وَلا مُعْطِـيَ لِما مَنَـعْت، وَلا يَنْفَـعُ ذا الجَـدِّ مِنْـكَ الجَـد.</string>
    <string name="salat3" translatable="false">لا إلهَ إلاّ اللّه وحدَهُ لا شريكَ لهُ، لهُ الملكُ ولهُ الحَمد، وهوَ على كلّ شيءٍ قدير، لا حَـوْلَ وَلا قـوَّةَ إِلاّ بِاللهِ، لا إلهَ إلاّ اللّـه، وَلا نَعْـبُـدُ إِلاّ إيّـاه، لَهُ النِّعْـمَةُ وَلَهُ الفَضْل وَلَهُ الثَّـناءُ الحَـسَن، لا إلهَ إلاّ اللّهُ مخْلِصـينَ لَـهُ الدِّينَ وَلَوْ كَـرِهَ الكـافِرون.</string>
    <string name="salat4" translatable="false">سُـبْحانَ اللهِ، والحَمْـدُ لله ، واللهُ أكْـبَر.</string>
    <string name="salat5" translatable="false">اللّهُـمَّ إِنِّـي أَسْأَلُـكَ عِلْمـاً نافِعـاً وَرِزْقـاً طَيِّـباً ، وَعَمَـلاً مُتَقَـبَّلاً.</string>
    <string name="salat6" translatable="false">اللَّهُمَّ أَجِرْنِي مِنْ النَّار. </string>
    <string name="salat7" translatable="false">اللَّهُمَّ أَعِنِّي عَلَى ذِكْرِكَ وَشُكْرِكَ وَحُسْنِ عِبَادَتِكَ.</string>
    <string name="time1e">After the greeting of the Fajr prayer.</string>
    <string name="time33">Thirty-three times</string>
    <string name="time3e">Three times after the Fajr and Maghrib prayers. And time after other prayers.</string>
    <string name="time7e">After the morning and sunset prayers.</string>
    <string name="adhandikr">Azan Azkar</string>
    <string name="adhan1" translatable="false">يَقُولُ مِثْلَ مَا يَقُولُ الـمُؤَذِّنُ إلاَّ فِي "حَيَّ عَلَى الصَّلاةِ وَحَيَّ عَلَى الفَلاَحِ" فَيَقُولُ: "لاَ حَوْلَ وَلا قُوَّةَ إلاَّ باللَّهِ".</string>
    <string name="adhan2" translatable="false">"مَنْ قَال حِينَ يسْمعُ المُؤذِّنَ : أَشْهَد أَنْ لا إِله إِلاَّ اللَّه وحْدهُ لا شَريك لهُ ، وَأَنَّ مُحمَّداً عبْدُهُ وَرسُولُهُ ، رضِيتُ بِاللَّهِ ربًّا ، وبمُحَمَّدٍ رَسُولاً ، وبالإِسْلامِ دِينًا ، غُفِر لَهُ ذَنْبُهُ". رواه مسلم . </string>
    <string name="adhan3" translatable="false">"إِذا سمِعْتُمُ النِّداءَ فَقُولُوا مِثْلَ ما يَقُولُ ، ثُمَّ صَلُّوا علَيَّ ، فَإِنَّهُ مَنْ صَلَّى علَيَّ صَلاةً صَلَّى اللَّه عَلَيْهِ بِهَا عشْراً ، ثُمَّ سلُوا اللَّه لي الْوسِيلَةَ ، فَإِنَّهَا مَنزِلَةٌ في الجنَّةِ لا تَنْبَغِي إِلاَّ لعَبْدٍ منْ عِباد اللَّه وَأَرْجُو أَنْ أَكُونَ أَنَا هُو ، فَمنْ سَأَل ليَ الْوسِيلَة حَلَّتْ لَهُ الشَّفاعَةُ". رواه مسلم . </string>
    <string name="adhan4" translatable="false">"من قَال حِين يسْمعُ النِّداءَ : اللَّهُمَّ رَبَّ هذِهِ الدَّعوةِ التَّامَّةِ ، والصَّلاةِ الْقَائِمةِ، آت مُحَمَّداً الْوسِيلَةَ ، والْفَضَيِلَة، وابْعثْهُ مقَامًا محْمُوداً الَّذي وعَدْتَه ، حلَّتْ لَهُ شَفَاعتي يوْم الْقِيامِة" .رواه البخاري .</string>
    <string name="adhan5" translatable="false">اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ عَلَى سَيِّدِنَا مُحَمَّدٍ.
اللَّهُمَّ رَبَّ هَذِهِ الدَّعْوَةِ التَّامَّةِ، والصَّلاةِ القَائِمَةِ، آتِ مُـحَمَّداً الوَسِيْلَةَ والفَضِيْلَةَ، وابْعَثْهُ مَقَاماً مَـحْمُوداً الَّذِي وَعَدْتَهُ، إنَّكَ لا تُخْلِفُ الـمِيْعَادِ.</string>
    <string name="adhan6" translatable="false">ما بين الأذان والإقامة فالدعاء عندئذٍ مرغّب فيه ومستحب.
قَالَ رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ: "الدُّعَاءُ لَا يُرَدُّ بَيْنَ الْأَذَانِ وَالْإِقَامَةِ".
قَالَ رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ: "إِنَّ الدُّعَاءَ لَا يُرَدُّ بَيْنَ الْأَذَانِ وَالْإِقَامَةِ فَادْعُوا".</string>
    <string name="adhan1e">What is said when hearing the call to prayer:</string>
    <string name="adhan2e">On the authority of Saad bin Abi Waqas, may God be pleased with him, on the authority of the Prophet, may God’s prayers and peace be upon him, that he said:</string>
    <string name="adhan3e">عَنْ عبْدِ اللَّهِ بْنِ عَمرِو بْنِ العاصِ رضِيَ اللَّه عنْهُما أَنه سَمِع رسُولَ اللَّهِ صَلّى اللهُ عَلَيْهِ وسَلَّم يقُولُ :</string>
    <string name="adhan4e">On the authority of Jabir bin Abdullah, may God be pleased with them both, that the Messenger of God, may God’s prayers and peace be upon him, said:</string>
    <string name="adhan5e">What is said after hearing the call to prayer:</string>
    <string name="adhan6e">What is said between the call to prayer and the iqama:</string>
    <string name="mosquedikr">Mosque Dhikr</string>
    <string name="mosque1" translatable="false">"اللّهُـمَّ اجْعَـلْ في قَلْبـي نورا ، وَفي لِسـاني نورا، وَاجْعَـلْ في سَمْعي نورا، وَاجْعَـلْ في بَصَري نورا، وَاجْعَـلْ مِنْ خَلْفي نورا، وَمِنْ أَمامـي نورا، وَاجْعَـلْ مِنْ فَوْقـي نورا ، وَمِن تَحْتـي نورا .اللّهُـمَّ أَعْطِنـي نورا. "</string>
    <string name="mosque1e" translatable="false">دُعَاءُ الذَّهَابِ إلَى المَسْجِدِ</string>
    <string name="mosque2" translatable="false">يَبْدَأُ بِرِجْلِهِ اليُمْنَى، وَيَقُولُ: أَعوذُ باللهِ العَظيـم وَبِوَجْهِـهِ الكَرِيـم وَسُلْطـانِه القَديـم مِنَ الشّيْـطانِ الرَّجـيم، بِسْمِ اللَّهِ، وَالصَّلاةُ وَالسَّلامُ عَلَى رَسُولِ الله، اللّهُـمَّ افْتَـحْ لي أَبْوابَ رَحْمَتـِك.</string>
    <string name="mosque2e" translatable="false">دُعَاءُ دُخُولِ المَسْجِدِ</string>
    <string name="mosque3" translatable="false">يَبْدَأُ بِرِجْلِهِ الْيُسْرَى، وَيَقُولُ: بِسْـمِ اللَّـهِ وَالصَّلاةُ وَالسَّلامُ عَلَى رَسُولِ اللَّهِ، اللَّهُمَّ إنِّي أَسْأَلُكَ مِنْ فَضْلِكَ، اللَّهُمَّ اعْصِمْنِي مِنَ الشَّيْطَانِ الرَّجِيم.</string>
    <string name="mosque3e" translatable="false">دُعَاءُ الخُرُوجِ مِنَ المَسْجِدِ</string>
    <string name="ablutiondikr">Ablution Dhikr</string>
    <string name="wudu1" translatable="false">"بِسْمِ ٱللّٰهِ". </string>
    <string name="wudu1e">Dhikr before ablution</string>
    <string name="wudu2" translatable="false">أشْهَدُ أن لا إله إلا الله وحْدَهُ لا شريكَ لهُ ، وأشْهَدُ أنَّ محمداً عَبدُهُ ورسُولُه. اللَّهُمَّ اجْعَلْني مِنَ التَّوَّابينَ واجْعَلْنِي من المُتَطَهِّرِينَ. سُبْحَانَكَ اللَّهُمَّ وبَحَمْدكَ أشْهدُ أنْ لا إلهَ إلا أنْتَ أَسْتَغْفِرُكَ وأتُوبُ إِلَيْكَ.</string>
    <string name="wudu2e">Dhikr after ablution</string>
    <string name="fooddikr">Food Dhikr</string>
    <string name="food1">In the name of God. If he forgets at the beginning, then he should say: In the name of God, first and last.</string>
    <string name="food1e">Dhikr when eating and drinking</string>
    <string name="food2" translatable="false">الْحَمْدُ للهِ الَّذِي أَطْعَمَنِي هَذَا وَرَزَقَنِيهِ مِنْ غَيْرِ حَوْلٍ مِّنِّي وَلاَ قُوَّةٍ.
الْحَمْدُ لِلَّهِ كَثِيرًا طَيِّبًا مُبَارَكًا فِيهِ غَيْرَ مَكْفِيٍّ وَلَا مُوَدَّعٍ وَلَا مُسْتَغْنًى عَنْهُ رَبَّنَا. </string>
    <string name="food2e">Male when emptying food and drink</string>
    <string name="food3" translatable="false">كَانَ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ يَشْرَبُ فِي ثَلاَثَةِ أَنْفَاسٍ، إِذَا أَدْنَى الإِنَاءَ إِلَى فَمِهِ سَمَّى اللهَ تَعَالَى وَإِذَا أَخَّرَهُ حَمِدَ اللهَ تَعَالَى، يَفْعَلُ ذَلِكَ ثَلاَثَ مَرَّاتٍ. </string>
    <string name="food3e">The guidance of the Prophet in drinking</string>
    <string name="traveldikr">Travel Dhikr</string>
    <string name="travel1" translatable="false">الله أكبر ، الله أكبر ، سبحان الذي سخرلنا هذا وما كنا له مقرنين وإنا إلى ربنا لمنقلبون .اللهم إنا نسألك في سفرنا هذا البر والتقوى ، ومن العمل ما ترضى ، اللهم هون علينا سفرنا هذا وطوي عنا بعده ،اللهم أنت الصاحب في السفر ، والخليفة في الأهل ،اللهم إني أعوذ بك من وعثاء السفر ،وكآبة المنظر وسوء المنقلب في المال والأهل </string>
    <string name="travel1e">Travel prayer</string>
    <string name="travel2" translatable="false">يكبر على كل شرف ثلاث تكبيرات ثم يقول: لا إله إلا الله وحده لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير، آيبون، تائبون، عابدون، لربنا حامدون، صدق الله وعده، ونصر عبده، وهزم الأحزاب وحده.</string>
    <string name="travel2e">Mentioned return from travel</string>
    <string name="travel3" translatable="false">أستودعك الله الذي لا تضيع ودائعه.</string>
    <string name="travel3e">The traveler\'s supplication for the resident:</string>
    <string name="travel4" translatable="false">أستودعك الله دينك وأمانتك وآخر عملك وفي روايه وخواتيم عملك ، زودك الله التقوى ، وغفر ذنبك ويسر لك الخير حيث ما كنت .</string>
    <string name="travel4e">Resident prayer for the traveler:</string>
    <string name="travel5" translatable="false">من نزل منزلاُ ثم قال : أعوذ بكلمات الله التامات من شر ما خلق . لم يضره شيء حتى يرحل من منزله ذلك.</string>
    <string name="appversion">App Version</string>
    <string name="version">1.4-beta1</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="reportproblem">Report Problem</string>
    <string name="givefeedback">Feedback</string>
    <string name="developedby" translatable="false">Made with ❤ by mitsociety.id</string>
    <string name="original_developedby" translatable="false">Huge thanks and ❤ to Kawtar Choubari and Shaik Jaleel as original author and for inspiration. May Allah bless all of you.</string>
</resources>